Customizations for BCBSNC

--- a/tree/master/cloud/src/deployments/Scripts/Helper Utilities/Microsoft.Legal.MatterCenter.CreateTerm.exe.config
+++ b/tree/master/cloud/src/deployments/Scripts/Helper Utilities/Microsoft.Legal.MatterCenter.CreateTerm.exe.config
@@ -10,7 +10,7 @@
     <add key="termconfig" value="TermStore_Config"/>
     <add key="clientconfig" value="Client_Config"/>
     <add key="clientterm" value="Clients"/>
-    <add key="termName" value="MatterCenterTerms"/>
+    <add key="termName" value="MatterCenterTerms2"/>
     <add key="clientidterm" value="Client ID"/>
     <add key="pgterm" value="Practice Groups"/>
   </appSettings>
