--- a/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Service/Microsoft.Legal.MatterCenter.ServiceTest/appsettings.json
+++ b/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Service/Microsoft.Legal.MatterCenter.ServiceTest/appsettings.json
@@ -13,8 +13,8 @@
     }
   },
   "Matter": {
-    "ProvisionMatterAppURL": "https://msmatter.sharepoint.com/sites/catalog/MatterCenter",
-    "CentralRepositoryUrl": "https://msmatter.sharepoint.com/sites/catalog",
+    "ProvisionMatterAppURL": "https://msmatter.sharepoint.com/sites/appcatalog/MatterCenter",
+    "CentralRepositoryUrl": "https://msmatter.sharepoint.com/sites/appcatalog",
     "EditMatterAllowedPermissionLevel": "Full Control",
     "ColumnNameGuid": "GUID",
     "RoleListColumnRoleName": "RoleName",
@@ -41,7 +41,7 @@
     "StampedPropertyTeamMembers": "TeamMembers",
     "StampedPropertyBlockedUploadUsers": "BlockedUploadUsers",
     "StampedPropertyMatterCenterUserEmails": "MatterCenterUserEmails",
-    "StampedPropertyPracticeGroup": "PracticeGroup",
+    "StampedPropertyPracticeGroup": "Practice Area",
     "StampedPropertyAreaOfLaw": "AreaOfLaw",
     "StampedPropertySubAreaOfLaw": "SubAreaOfLaw",
     "StampedPropertyMatterName": "MatterName",
@@ -78,13 +78,13 @@
     "MattersListColumnManagingAttorney": "ManagingAttorney",
     "MattersListColumnSupport": "Support",
     "MatterLandingPageSections": "taskPane,calendarPane,matterCenterFooter,matterInfo,matterCenterHeader,rssPane,oneNotePane",
-    "CommonCSSFileLink": "/sites/catalog/SiteAssets/{0}/Styles/spCommon.css",
-    "JQueryFileName": "/sites/catalog/SiteAssets/{0}/Scripts/jquery-1.11.1.min.js",
+    "CommonCSSFileLink": "sites/AppCatalog/SiteAssets/{0}/Styles/spCommon.css",
+    "JQueryFileName": "sites/AppCatalog/SiteAssets/{0}/Scripts/jquery-1.11.1.min.js",
     "CommonFolderName": "Matter Center Assets/Common Assets",
     "MatterLandingFolderName": "Matter Center Assets/Matter Landing Assets",
-    "MatterLandingCSSFileName": "/sites/catalog/SiteAssets/{0}/Styles/MatterLanding.css",
-    "CommonJSFileLink": "/sites/catalog/SiteAssets/{0}/Scripts/spCommon.js",
-    "MatterLandingJSFileName": "/sites/catalog/SiteAssets/{0}/Scripts/MatterLanding.js",
+    "MatterLandingCSSFileName": "sites/AppCatalog/SiteAssets/{0}/Styles/MatterLanding.css",
+    "CommonJSFileLink": "sites/AppCatalog/SiteAssets/{0}/Scripts/spCommon.js",
+    "MatterLandingJSFileName": "sites/AppCatalog/SiteAssets/{0}/Scripts/MatterLanding.js",
     "ShareListColumnMatterPath": "MatterPath",
     "ShareListColumnMailList": "MailList"
   },
