--- a/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/appsettings.json
+++ b/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/appsettings.json
@@ -69,13 +69,13 @@
     "MattersListColumnManagingAttorney": "ManagingAttorney",
     "MattersListColumnSupport": "Support",
     "MatterLandingPageSections": "taskPane,calendarPane,matterCenterFooter,matterInfo,matterCenterHeader,rssPane,oneNotePane",
-    "CommonCSSFileLink": "/sites/catalog/SiteAssets/{0}/Styles/spCommon.css",
-    "JQueryFileName": "/sites/catalog/SiteAssets/{0}/Scripts/jquery-1.11.1.min.js",
+    "CommonCSSFileLink": "/sites/AppCatalog/SiteAssets/{0}/Styles/spCommon.css",
+    "JQueryFileName": "/sites/AppCatalog/SiteAssets/{0}/Scripts/jquery-1.11.1.min.js",
     "CommonFolderName": "Matter Center Assets/Common Assets",
     "MatterLandingFolderName": "Matter Center Assets/Matter Landing Assets",
-    "MatterLandingCSSFileName": "/sites/catalog/SiteAssets/{0}/Styles/MatterLanding.css",
-    "CommonJSFileLink": "/sites/catalog/SiteAssets/{0}/Scripts/spCommon.js",
-    "MatterLandingJSFileName": "/sites/catalog/SiteAssets/{0}/Scripts/MatterLanding.js",
+    "MatterLandingCSSFileName": "/sites/AppCatalog/SiteAssets/{0}/Styles/MatterLanding.css",
+    "CommonJSFileLink": "/sites/AppCatalog/SiteAssets/{0}/Scripts/spCommon.js",
+    "MatterLandingJSFileName": "/sites/AppCatalog/SiteAssets/{0}/Scripts/MatterLanding.js",
     "ShareListColumnMatterPath": "MatterPath",
     "ShareListColumnMailList": "MailList"
   },
@@ -118,18 +118,18 @@
     "ContextualHelpSectionColumnSectionTitle": "SectionTitle"
   },
   "General": {
-    "Tenant": "msmatter.onmicrosoft.com",
+    "Tenant": "bcbsncps.onmicrosoft.com",
     "AADInstance": "https://login.windows.net/{0}",
     "IsTenantDeployment": true,
     "IsReadOnlyUser": "IsReadOnlyUser",
-    "SiteURL": "https://msmatter.sharepoint.com",
-    "CentralRepositoryUrl": "https://msmatter.sharepoint.com/sites/catalog",
+    "SiteURL": "https://bcbsncps.sharepoint.com",
+    "CentralRepositoryUrl": "https://bcbsncps.sharepoint.com/sites/appcatalog",
     "ExchangeServiceURL": "https://outlook.office365.com/ews/Exchange.asmx",
     "MainURL": "http://www.microsoft.com/mattercenter",
     "MatterCenterConfiguration": "MatterCenterConfiguration",
-    "KeyVaultURI": "",
-    "KeyVaultClientID": "",
-    "KeyVaultCertThumbPrint": "",
+    "KeyVaultURI": "https://BCBSNCMatterCenterPS1005.vault.azure.net",
+    "KeyVaultClientID": "c06d86b2-7ae6-4feb-b42a-73fef0404653",
+    "KeyVaultCertThumbPrint": "3BBD91F200D852766E86A87143FF6977118C99A4",
     "IsDevMode": true,
     "GraphUrl": "https://graph.microsoft.com",
     "IsBackwardCompatible": true,
@@ -226,7 +226,7 @@
       },
       "matterClient": {
         "displayInUI": true,
-        "position": 4,
+        "position": -1,
         "defaultVisibleInGrid": true,
         "displayInFlyOut": true,
         "displayInDashboard": true
@@ -274,11 +274,11 @@
         "displayInDashboard": false
       },
       "matterAreaOfLaw": {
-        "displayInUI": false,
-        "position": -1,
-        "defaultVisibleInGrid": false,
-        "displayInFlyOut": false,
-        "displayInDashboard": false
+        "displayInUI": true,
+        "position": 4,
+        "defaultVisibleInGrid": true,
+        "displayInFlyOut": true,
+        "displayInDashboard": true
       },
       "hideUpload": {
         "displayInUI": false,
@@ -396,7 +396,7 @@
 
       "documentCreatedDate": {
         "displayInUI": true,
-        "position": 5,
+        "position": -1,
         "defaultVisibleInGrid": false,
         "displayInFlyOut": true,
         "cellTemplate": "<div class=\"ui-grid-cell-contents\" datefilter date=\"{{row.entity.documentCreatedDate}}\"></div>",
@@ -682,7 +682,7 @@
 
       "docId": {
         "displayInUI": false,
-        "position": -1,
+        "position": 5,
         "defaultVisibleInGrid": false,
         "displayInFlyOut": false,
         "cellTemplate": "",
@@ -695,7 +695,7 @@
         "headerCellClass": "gridclass",
         "dashboardCellClass": "",
         "dashboardHeaderCellClass": "",
-        "displayInDashboard": false
+        "displayInDashboard": true
       }
     }
   },
