--- a/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.jobs/appSettings.json
+++ b/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.jobs/appSettings.json
@@ -8,12 +8,12 @@
     }
   },
   "General": {
-    "KeyVaultURI": "",
-    "KeyVaultClientID": "",
-    "KeyVaultCertThumbPrint": "",
-    "CentralRepositoryUrl": "",
-    "AdminUserName": "",
-    "AdminPassword": ""
+    "KeyVaultURI": "https://BCBSNCMatterCenterPS1005.vault.azure.net",
+    "KeyVaultClientID": "c06d86b2-7ae6-4feb-b42a-73fef0404653",
+    "KeyVaultCertThumbPrint": "3BBD91F200D852766E86A87143FF6977118C99A4",
+    "CentralRepositoryUrl": "https://bcbsncps.sharepoint.com/sites/appcatalog",
+    "AdminUserName": "cardinal@bcbsncps.onmicrosoft.com",
+    "AdminPassword": "S0lut10ns1"
   },
   "Settings": {
     "ExternalAccessRequests": "Access Requests",
