Small text update

--- a/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/appsettings.json
+++ b/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/appsettings.json
@@ -235,7 +235,7 @@
         "displayInUI": true,
         "position": 5,
         "defaultVisibleInGrid": true,
-        "displayInFlyOut": false,
+        "displayInFlyOut": true,
         "displayInDashboard": false
       },
       "matterResponsibleAttorney": {
