Fixes based on merged changes

--- a/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/appsettings.json
+++ b/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/appsettings.json
@@ -235,7 +235,7 @@
         "keyName": "matterClientId",
         "displayInUI": true,
         "defaultVisibleInGrid": true,
-        "position": 2,
+        "position": -1,
         "displayInFlyOut": true,
         "cellTemplate": "<div class=\"ui-grid-cell-contents\" >{{row.entity.matterClientId}}.{{row.entity.matterClient}}</div>",
         "headerCellTemplate": "Custom",
@@ -256,7 +256,6 @@
         "displayInUI": true,
         "position": -1,
         "defaultVisibleInGrid": true,
-        "position": 3,
         "displayInFlyOut": true,
         "cellTemplate": "",
         "headerCellTemplate": "../app/matter/MatterTemplates/ClientHeaderTemplate.html",
@@ -393,23 +392,23 @@
       },
       "matterID": {
         "keyName": "matterID",
-        "displayInUI": false,
-        "defaultVisibleInGrid": false,
-        "position": -1,
-        "displayInFlyOut": false,
+        "displayInUI": true,
+        "defaultVisibleInGrid": true,
+        "position": 2,
+        "displayInFlyOut": true,
         "cellTemplate": "",
         "headerCellTemplate": "../app/matter/MatterTemplates/ProjectIDHeaderTemplate.html",
         "enableHiding": true,
         "width": "210",
         "enableColumnMenu": true,
-        "displayName": "GridColumn6Header",
+        "displayName": "GridColumn8Header",
         "cellClass": "gridclass",
         "headerCellClass": "gridclass",
         "dashboardwidth": "210",
         "dashboardcellTemplate": "",
         "dashboardCellClass": "gridclass",
         "dashboardHeaderCellClass": "gridclass",
-        "displayInDashboard": false
+        "displayInDashboard": true
       },
       "matterClientUrl": {
         "keyName": "matterClientUrl",
@@ -535,7 +534,7 @@
       "documentClient": {
         "keyName": "documentClient",
         "displayInUI": true,
-        "position": 2,
+        "position": -1,
         "defaultVisibleInGrid": true,
         "displayInFlyOut": true,
         "cellTemplate": "<div class=\"ui-grid-cell-contents\">{{row.entity.documentClient==\"\" ? \"NA\":row.entity.documentClient}}</div>",
@@ -674,14 +673,14 @@
       },
       "documentMatterName": {
         "keyName": "documentMatterName",
-        "displayInUI": false,
-        "position": -1,
-        "defaultVisibleInGrid": false,
-        "displayInFlyOut": false,
+        "displayInUI": true,
+        "position": 2,
+        "defaultVisibleInGrid": true,
+        "displayInFlyOut": true,
         "cellTemplate": "",
         "headerCellTemplate": "Custom",
         "enableHiding": true,
-        "width": "200",
+        "width": "150",
         "enableColumnMenu": true,
         "displayName": "GridColumn3Header",
         "cellClass": "gridclass",
@@ -690,7 +689,7 @@
         "dashboardHeaderCellClass": "",
         "dashboardwidth": "250",
         "dashboardcellTemplate": "",
-        "displayInDashboard": false
+        "displayInDashboard": true
       },
       "documentPracticeGroup": {
         "keyName": "documentPracticeGroup",
